Fix hover on touch issue on Safari for iOS

--- a/src/styles/components/_card.scss
+++ b/src/styles/components/_card.scss
@@ -62,7 +62,9 @@
   &--active,
   &:hover {
     color: $blue-900;
+  }
 
+  &--active {
     .mdl-list__item-secondary-action {
       display: block;
     }
